--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.0.8",
     "handlebars": "^4.7.8",
     "next": "14.1.3",
     "nodemailer": "^6.9.12",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
