--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "framer-motion": "^11.0.8",
+    "gsap": "^3.12.5",
     "handlebars": "^4.7.8",
     "next": "14.1.3",
     "nodemailer": "^6.9.12",
