--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-server-dom-webpack": "^0.0.1"
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
