--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
     "handlebars": "^4.7.8",
