--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "@plaiceholder/next": "^3.0.0",
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
     "handlebars": "^4.7.8",
+    "lightgallery": "^2.7.2",
     "next": "14.1.3",
     "nodemailer": "^6.9.12",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-lazy-load-image-component": "^1.6.0",
+    "sass": "^1.72.0",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
@@ -27,6 +31,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lazy-load-image-component": "^1.6.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
