--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-icons": "^5.0.1",
     "react-lazy-load-image-component": "^1.6.0",
     "sass": "^1.72.0",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "validator": "^13.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -32,6 +34,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-lazy-load-image-component": "^1.6.3",
+    "@types/validator": "^13.11.9",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
