--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "gsap": "^3.12.5",
     "handlebars": "^4.7.8",
     "lightgallery": "^2.7.2",
-    "next": "14.1.3",
+    "next": "^14.1.4",
     "nodemailer": "^6.9.12",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-lazy-load-image-component": "^1.6.0",
@@ -32,13 +33,13 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.68",
+    "@types/react-dom": "^18.2.22",
     "@types/react-lazy-load-image-component": "^1.6.3",
     "@types/validator": "^13.11.9",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3",
+    "eslint-config-next": "^14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
