--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^14.1.4",
     "nodemailer": "^6.9.12",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
