--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "classnames": "^2.5.1",
     "formidable": "^3.5.1",
     "framer-motion": "^11.0.8",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
     "handlebars": "^4.7.8",
     "lightgallery": "^2.7.2",
+    "markdown-to-jsx": "^7.4.5",
     "next": "^14.1.4",
     "nodemailer": "^6.9.12",
     "react": "^18.2.0",
