--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@gsap/react": "^2.1.0",
     "@plaiceholder/next": "^3.0.0",
+    "@portabletext/react": "^3.0.17",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.36.4",
     "classnames": "^2.5.1",
     "formidable": "^3.5.1",
     "framer-motion": "^11.0.8",
-    "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
     "handlebars": "^4.7.8",
     "lightgallery": "^2.7.2",
-    "markdown-to-jsx": "^7.4.5",
     "next": "^14.1.4",
+    "next-sanity": "^7.1.4",
     "nodemailer": "^6.9.12",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
@@ -28,12 +30,15 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-lazy-load-image-component": "^1.6.0",
+    "sanity": "^3.36.4",
     "sass": "^1.72.0",
+    "styled-components": "^6.1.8",
     "swiper": "^11.0.7",
     "validator": "^13.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.12",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.68",
