--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.36.4",
     "classnames": "^2.5.1",
+    "dotenv": "^16.4.5",
     "formidable": "^3.5.1",
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
