--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@sanity/vision": "^3.36.4",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
+    "escape-html": "^1.0.3",
     "formidable": "^3.5.1",
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
     "handlebars": "^4.7.8",
     "lightgallery": "^2.7.2",
     "next": "^14.1.4",
+    "next-mdx-remote": "^4.4.1",
     "next-sanity": "^7.1.4",
     "nodemailer": "^6.9.12",
     "react": "^18.2.0",
@@ -33,6 +35,7 @@
     "react-lazy-load-image-component": "^1.6.0",
     "sanity": "^3.36.4",
     "sass": "^1.72.0",
+    "slate": "^0.102.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.7",
     "validator": "^13.11.0",
